--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,7 +4,7 @@ on: [push]
 env:
   IMAGE_NAME: persistencia-api
   REGISTRY: docker.io
-  DOCKER_USER: ${{ secrets.DOCKER_USERNAME }}
+  DOCKER_USER: zennbyte
   DOCKER_PASS: ${{ secrets.DOCKER_PASSWORD }}
 
 jobs:
